--- a/src-plugins/CMakeLists.txt
+++ b/src-plugins/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(nhdpcheck)
 add_subdirectory(hysteresis_olsrv1)
 add_subdirectory(ff_ett)
 add_subdirectory(neighbor_probing)
+add_subdirectory(route_modifier)
