--- a/src/app_data.c.in
+++ b/src/app_data.c.in
@@ -40,6 +40,7 @@
  */
 
 #include "core/oonf_logging.h"
+#include "core/os_core.h"
 #include "app_data.h"
 
 static struct oonf_appdata _appdata = {
@@ -50,13 +51,13 @@ static struct oonf_appdata _appdata = {
   .help_suffix = "${OONF_HELP_SUFFIX}",
 
   .default_config = "${OONF_DEFAULT_CONF}",
-
+  .default_lockfile = OS_CORE_LOCKFILE_FOLDER "${OONF_APP_LIBPREFIX}.lock",
+  
   .git_commit = "${OONF_APP_GIT}",
 
   .sharedlibrary_prefix = "${CMAKE_SHARED_LIBRARY_PREFIX}${OONF_APP_LIBPREFIX}_",
   .sharedlibrary_postfix = "${CMAKE_SHARED_LIBRARY_SUFFIX}",
 };
-
 
 const struct oonf_appdata *
 oonf_appdata_get(void) {
