--- a/src-plugins/CMakeLists.txt
+++ b/src-plugins/CMakeLists.txt
@@ -1,4 +1,5 @@
 # add subdirectories
+add_subdirectory(auto_ll4)
 add_subdirectory(constant_metric)
 add_subdirectory(nhdpcheck)
 add_subdirectory(hysteresis_olsrv1)
